<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!--
  ~ Apache License
  ~ Version 2.0, January 2004
  ~ http://www.apache.org/licenses/
  ~
  ~    Copyright 2013 - 2025 Aurelian Tutuianu
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.padreati</groupId>
    <artifactId>rapaio</artifactId>
    <packaging>pom</packaging>
    <version>8.0.0</version>
    <name>rapaio</name>
    <description>Rapaio Library</description>
    <url>https://github.com/padreati/rapaio</url>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/padreati/rapaio.git</url>
    </scm>

    <developers>
        <developer>
            <id>padreati</id>
            <name>Aurelian Tutuianu</name>
            <email>padreati@yahoo.com</email>
            <roles>
                <role>Project-Administrator</role>
                <role>Developer</role>
            </roles>
            <timezone>+2</timezone>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>24</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <maven.plugin.validation>VERBOSE</maven.plugin.validation>
    </properties>

    <modules>
        <module>rapaio-code-gen</module>
        <module>rapaio-datasets</module>
        <module>rapaio-lib</module>
        <module>rapaio-experiment</module>
        <module>rapaio-jmh</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <compilerArgs>
                        <compilerArg>--enable-preview</compilerArg>
                        <compilerArg>--add-modules</compilerArg>
                        <compilerArg>java.base,jdk.incubator.vector</compilerArg>
                    </compilerArgs>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <reuseForks>true</reuseForks>
                    <!--suppress UnresolvedMavenProperty -->
                    <argLine>--enable-preview --add-modules java.base,jdk.incubator.vector</argLine>
                </configuration>
            </plugin>
        </plugins>

    </build>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

</project>
